--- a/charity.html
+++ b/charity.html
@@ -31,8 +31,8 @@
     <section class="new-section">
         <div class="container">
             <div class="section-content">
-                <h3>New Section Title</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis turpis at arcu tincidunt fermentum et in nisi. Sed vel ultrices eros. Integer sit amet varius arcu, nec aliquet justo. Donec non ante ut libero mollis tempus.</p>
+                <h3>Looking forward hearing from you</h3>
+                <p>Not sure if this is something for you? Have questions about DSE? Questions about pricing? --> we're happy to help you! Write us an email.</p>
             </div>
         </div>
     </section>
@@ -43,14 +43,12 @@
             <div class="footer-wrapper">
                 <img src="./img/Dark Side of Earth Prototyp - Ohne Background.png" alt="DSE logo">
                 <ul class="footer-links">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Gallery</a></li>
-                    <li><a href="#">Charity</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="https://opensea.io/DarkSideofEarth">art work</a></li>
+                    <li><a href="about_us_index.html">about us</a></li>
                 </ul>
                 <ul class="footer-social-links">
-                    <li><a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                     <li><a href="https://www.instagram.com/darkside0fearth/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                    <li><a href="https://www.youtube.com" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
                 </ul>
             </div>
 
