--- a/index.html
+++ b/index.html
@@ -300,9 +300,9 @@
             <div class="footer-wrapper">
                 <img src="./img/Dark Side of Earth Prototyp - Ohne Background.png" alt="DSE logo">
                 <ul>
-                    <li><a href="#">Upload</a></li>
-                    <li><a href="#">Search Engine</a></li>
-                    <li><a href="#">Get in touch with us</a></li>
+                    <li><a href="charity.html">consulting</a></li>
+                    <li><a href="https://opensea.io/DarkSideofEarth">art work</a></li>
+                    <li><a href="about_us_index.html">about us</a></li>
                 </ul>
                 <ul>
                     <li><a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
