--- a/about_us_index.html
+++ b/about_us_index.html
@@ -28,14 +28,12 @@
             <div class="footer-wrapper">
                 <img src="./img/Dark Side of Earth Prototyp - Ohne Background.png" alt="DSE logo">
                 <ul>
-                    <li><a href="#">home</a></li>
-                    <li><a href="#">Gallery</a></li>
-                    <li><a href="#">Charity</a></li>
+                    <li><a href="index.html">home</a></li>
+                    <li><a href="charity.html">charity</a></li>
+                    <li><a href="https://opensea.io/DarkSideofEarth">art work</a></li>
                 </ul>
                 <ul>
-                    <li><a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                     <li><a href="https://www.instagram.com/darkside0fearth/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                    <li><a href="https://www.youtube.com" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
                 </ul>
             </div>
 
