--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </div>
                 <nav>
                     <ul>
-                        <li><a href="charity.html">consulting</a></li>
+                        <li><a href="charity.html">charity</a></li>
                         <li><a href="https://opensea.io/DarkSideofEarth">art work</a></li>
                         <li><a href="AGB_Datenschutz/AGB_DSE.txt">AGB's</a></li>
                         <li><a href="about_us_index.html">About us</a></li>
@@ -300,7 +300,7 @@
             <div class="footer-wrapper">
                 <img src="./img/Dark Side of Earth Prototyp - Ohne Background.png" alt="DSE logo">
                 <ul>
-                    <li><a href="charity.html">consulting</a></li>
+                    <li><a href="charity.html">charity</a></li>
                     <li><a href="https://opensea.io/DarkSideofEarth">art work</a></li>
                     <li><a href="about_us_index.html">about us</a></li>
                 </ul>
