--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <p><span>With our solutions the you and the world become a better place</span>
                         <span>DSE (DarkSideofEarth) is the right partner your looking for, for a strong and meaningfull partnership</span></p>
                     <div class="btn primary">
-                        <a href="www.apple.com">our Consulting <!--Hier noch verlinken-->
+                        <a href="charity.html">our Consulting <!--Hier noch verlinken-->
                             <img src="./img/arrow.svg" alt="arrow">
                         </a>
                     </div>    
@@ -83,7 +83,7 @@
                     <p>You are interested to present the newest kind of art in your gallery and want to 
 						do something for sociaty, contact us<p>
                     <div class="btn primary">
-                        <a href="search_engine/search_engine.php">Learn More
+                        <a href="mailto:customer.service.dse@gmail.com?subject=Gallerie Antrag von [Ihr Name/Firma]&body=Formulieren sie bitte hier ihren Wunsch">get in touch Learn More <!--Hier schauen ob das wirklich funktioniert was ich hier gemacht habe-->
                             <img src="./img/arrow.svg" alt="arrow">
                         </a>
                     </div>      
@@ -102,7 +102,7 @@
                     <h3>Wanna make your charity future proof?</h3>
                     <p>We consult you in how you could boost your charity / company when it comes to digital art and marketing.</p>
                     <div class="btn primary">
-                        <a href="project/project_upload_website.html">Learn More
+                        <a href="charity.html">Learn More
                             <img src="./img/arrow.svg" alt="arrow">
                         </a>
                     </div>      
@@ -116,7 +116,7 @@
                     <h3>Digital Marketing and Design</h3>
                     <p>You need support or consulting when it comes to Instagram, X, Facebook or else? We love to help you out.</p>
                     <div class="btn primary">
-                        <a href="#">Learn More
+                        <a href="mailto:customer.service.dse@gmail.com?subject=Betreff&body=Hier%20ist%20der%20Nachrichtentext">Learn More <!--Hier noch schauen ob das funktioniert was ich gemacht habe-->
                             <img src="./img/arrow.svg" alt="arrow">
                         </a>
                     </div>      
