--- a/index.html
+++ b/index.html
@@ -133,23 +133,22 @@
        <div class="container">
         <div class="section-heading">
             <h2>The best community ever</h2>
-            <p>We're on a journey, where we want to make things big, and the KSZ is one of our first locations
-                where we're located, to help students.
+            <p>We're on a journey, where we want to make big changes in the world. With our solutions you and the world can profit.
             </p>
         </div>
 
         <div class="sm-wrapper">
             <div>
                 <h2>1800</h2>
-                <span>Students</span>
+                <span>Clients</span>
             </div>
             <div>
-                <h2>78</h2>
-                <span>Classes</span>
+                <h2>6</h2>
+                <span>Employees</span>
             </div>
             <div>
                 <h2>huge</h2>
-                <span>Sponsored</span>
+                <span>Gallerys</span>
             </div>
             <div>
                 <h2>9786</h2>
