Update charity page
Update des neuen Textes

--- a/charity.html
+++ b/charity.html
@@ -20,7 +20,10 @@
                     <ul class="modern-bullets">
                         <li>Empower communities through art and design.</li>
                         <li>Contribute to sustainable and future-proof charities.</li>
-                        <li>Drive positive change through creative initiatives. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis turpis at arcu tincidunt fermentum et in nisi. Sed vel ultrices eros. Integer sit amet varius arcu, nec aliquet justo. Donec non ante ut libero mollis tempus.</li>
+                        <li>Drive positive change through creative initiatives. </li>
+                        <li>Das Ziel unseres Projekts ist es auf unsere Botschaft sowie auf die nicht KI-generierte Kunst des 21. Jahrhunderts aufmerksam zu machen und Spendengelder für gemeinnützige Organisationen einzusammeln. Dies gelingt uns mithilfe von digitalen Kunstwerken, welche wir auf OpenSea, dem weltweit grössten Marktplatz für NFTs, publizieren und somit auch die Bedeutung hinter den Werken den Menschen bringen, welche im Alltag mit der jeweiligen, bestehenden Problematik auf den ersten Augenblick nicht viel gemeinsam haben.</li>
+                        <li>Kurzgesagt: NFTs bieten uns die Möglichkeit, eine breite und globale Zielgruppe zu erreichen, die sich möglicherweise nicht traditionell mit Kunst oder unseren angesprochenen Themengebieten auseinandersetzt. Sie helfen uns, eine neue und alternative Möglichkeit des Spendens zu etablieren, indem wir beim Ersterwerb eines Werks unseres Projekts einen prozentualen Betrag an die jeweilige, in der NFT-Beschreibung erwähnte, Organisation spenden und dem Käufer folglich die Wahl geben, für welche Organisation er seine Spende tätigen möchte.</li>
+                        <li>Mit dieser Strategie verleihen wir NFTs eine neue Bedeutung, indem wir sie als Brücke zwischen zeitgenössischer Kunst und gemeinnützigen Taten positionieren, wobei der Fokus darauf liegt, auf wichtige soziale Anliegen hinzuweisen.</li>
                     </ul>
                 </div>
             </div>
