--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="container">
             <h5>SOME OF OUR TRUSTED CLIENTS</h5>
             <div class="clinets-wrapper">
-                <img src="./img/clients/1.svg" alt="">
+                <img src="./img/clients/" alt="">
                 <img src="./img/clients/2.svg" alt="">
                 <img src="./img/clients/3.svg" alt="">
                 <img src="./img/clients/4.svg" alt="">
