--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
             <h5>SOME OF OUR TRUSTED CLIENTS</h5>
             <div class="clinets-wrapper">
                 <img src="./img/clients/" alt="">
-                <img src="./img/clients/2.svg" alt="">
-                <img src="./img/clients/3.svg" alt="">
-                <img src="./img/clients/4.svg" alt="">
-                <img src="./img/clients/5.svg" alt="">
-                <img src="./img/clients/6.svg" alt="">
+                <img src="./img/clients/" alt="">
+                <img src="./img/clients/" alt="">
+                <img src="./img/clients/" alt="">
+                <img src="./img/clients/" alt="">
+                <img src="./img/clients/" alt="">
             </div>
         </div>
     </section>
